# schary-mono

./: Cargo.toml  LICENSE-MIT  docker-compose.yml
backend/: .gitignore  Cargo.toml  Config.yaml  Config.yaml.example  Dockerfile  database.sqlite
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20230404_143730_user.rs  m20230404_143746_permision.rs  m20230404_143819_class.rs  m20230405_163933_user_permision.rs
backend/src/: config.rs  main.rs  state.rs
backend/src/entity/: class.rs  mod.rs  permision.rs  prelude.rs  user.rs  user_permision.rs
backend/src/handler/: auth.rs  mod.rs
backend/src/model/: auth.rs
backend/src/view/: auth.rs  mod.rs
backend/templates/: index.html.tera  layoute.html.tera  login.html.tera
frontend/: Cargo.toml  README.md  Trunk.toml  index.html
